2010-02-08  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/42931
	* tree-loop-linear.c (try_interchange_loops): Don't call
	double_int_mul if estimated_loop_iterations failed.

2010-02-08  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/42898
	* tree-sra.c (build_accesses_from_assign): Do not mark in
	should_scalarize_away_bitmap if stmt has volatile ops.
	(sra_modify_assign): Do not process assigns piecemeal if if stmt
	has volatile ops.

2010-02-08  Joern Rennecke  <joern.rennecke@embecosm.com>

	* doc/tm.texi (TARGET_UNWIND_WORD_MODE): Document.

2010-02-07  Adam Nemet  <adambnmet@gmail.com>

	* config/mips/mips.md (*<optab>_trunc<mode>_exts): Fix comment
	before the pattern.

2010-02-07  Andrew Pinski  <pinskia@gmail.com>

	PR middle-end/42946
	* df-core.c (df_finish_pass): Change type of saved_flags to int.

2010-02-07  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/42988
	* graphite-dependences.c (dependence_polyhedron): Set PDDR_KIND
	to unknown_dependence.
	(graphite_legal_transform_dr): Handle the unknown_dependence.
	(graphite_carried_dependence_level_k): Same.

2010-02-07  Sebastian Pop  <sebastian.pop@amd.com>

	* ChangeLog.graphite: Remove testsuite/ or gcc/testsuite/.

2010-02-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42991
	* expr.c (get_inner_reference): Always initialize *pbitsize.

2010-02-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42956
	* gimplify.c (gimple_fold_indirect_ref): Avoid generating
	new ARRAY_REFs on variable size element or minimal index arrays.
	Complete.
	* tree-ssa-loop-ivopts.c (find_interesting_uses_address): Use
	gimple_fold_indirect_ref.

2010-02-06  Richard Earnshaw  <rearnsha@arm.com>

	PR target/42957
	* arm.c (arm_override_options): Just return if the user has specified
	an invalid fpu name.

2010-02-03  Jason Merrill  <jason@redhat.com>

	PR c++/42870
	* config/i386/cygming.h (ASM_OUTPUT_DEF_FROM_DECLS): Call
	i386_pe_maybe_record_exported_symbol.
